--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,3 +21,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#app {
+    height: 100vh;
+}
+
+main { 
+    height: 100%;
+}
